<resources>
    <!-- App and Activity Strings -->
    <string name="app_name">Timesheet</string>

    <!-- Navigation Drawer Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="action_add_hour">Add hours</string>
    <string name="action_view_calendar">View calendar</string>
    <string name="action_mode_edit" translatable="false">Edit</string>
    <string name="action_logout">Logout</string>

    <!-- Fake Data Strings -->
    <string name="full_name">Jonatan E. Salas</string>
    <string name="email">jonatan.salas@samsistemas.com.ar</string>

    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>

    <string name="sam">Building Software®</string>

    <string name="domain">\@samsistemas.com.ar</string>
    <string name="enterprise_name" translatable="false">by SAM Sistemas</string>

    <string name="email_password_error">Empty or incorrect Email and Password</string>
    <string name="email_error">Empty or incorrect Email</string>
    <string name="password_error">Empty or incorrect Password</string>
    <string name="login_error">Invalid credentials</string>
    <string name="internet_error">There is no Internet Connection</string>

    <!-- Login dialog message -->
    <string name="login_dialog_message">Authenticating..</string>

    <!-- Internet Dialog Strings -->
    <string name="internet_dialog_title">No connection available</string>
    <string name="internet_dialog_message">Internet connection is required to login</string>
    <string name="internet_dialog_negative_button">Exit</string>
    <string name="internet_dialog_positive_button">Open Settings</string>

    <!-- Password Dialog Strings -->
    <string name="password_dialog_title">Reset Password</string>
    <string name="password_dialog_latest">Insert latest password</string>
    <string name="password_dialog_new">Insert new password</string>
    <string name="password_dialog_negative_button">Cancel</string>
    <string name="password_dialog_positive_button">Save</string>

    <string name="of">of</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="no_date_selected">No date selected yet</string>
    <string name="no_job_logs">No upcoming Job Logs</string>

    <!-- Error messages -->
    <string name="error_no_available_job_logs">It seems that you haven\'t load any jobLog</string>

    <string-array name="hours" translatable="false">
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>5.5</item>
        <item>6.0</item>
        <item>6.5</item>
        <item>7.0</item>
        <item>7.5</item>
        <item>8.0</item>
        <item>8.5</item>
        <item>9.0</item>
     </string-array>

    <string name="description">Description</string>
    <string name="solicitude_number">Solicitude Number</string>
    <string name="sam_sistemas" translatable="false">SAM Sistemas SRL.</string>
    <string name="location_default" translatable="false">Recoleta, Capital Federal</string>
    <string name="logout_error">Error when trying to logout. Please, retry</string>

    <!-- Font paths -->
    <string name="roboto_light" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="roboto_medium" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_regular" translatable="false">fonts/Roboto-Regular.ttf</string>
    <string name="roboto_thin" translatable="false">fonts/Roboto-Thin.ttf</string>

</resources>
