<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <TextView android:id="@+id/timesheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/include"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="65sp"/>

        <include android:id="@+id/include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            layout="@layout/username_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/include"
            android:layout_alignLeft="@+id/login"
            android:layout_alignStart="@+id/login">

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="8"
                android:hint="@string/password"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/login"
            android:theme="@style/AppTheme.ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="end"
            android:layout_below="@+id/password_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/sam_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_above="@+id/include"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:text="@string/enterprise_name" />

        <TextView
            android:id="@+id/sam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/login"
            android:layout_alignEnd="@+id/login"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sam"
            android:textColor="@color/gray_light"
            android:textSize="16sp" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>